[package]
name = "yandk"
version = "0.1.0"
authors = ["Jack Chakany <jack@chakany.systems>"]
publish = false
edition = "2021"

[features]
default = ["coordinator"]
relay = ["dep:tokio", "dep:rand", "websockets"]
relay-pool = ["relay"]
websockets = [
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:tokio-stream",
    "dep:futures-util",
]
coordinator = ["dep:tokio", "relay-pool", "nostrdb"]
nostrdb = ["dep:nostrdb"]

[dependencies]
tokio-tungstenite = { version = ">=0.17, <=0.21", features = [
    "native-tls",
], optional = true }
secp256k1 = "0.29.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
tokio = { version = "1.37.0", features = [
    "full",
], optional = true } # todo!: CHANGE THIS LATER!!!!!!!!!
tokio-stream = { version = "0.1.15", optional = true }
tracing = "0.1.40"
futures-util = { version = "0.3.30", optional = true }
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", rev = "99d8296fcba5957245ed883e2f3b1c0d1cb16397", optional = true }
bech32 = "0.11.0"
hex = "0.4.3"
rand = { version = "0.8.5", optional = true }
